# OmniLayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gcc-arm-none-eabi.cmake
API/inc/: adc.h  exti.h  gpio.h  pwm.h  tim.h  usart.h
API/src/: adc.c  exti.c  gpio.c  pwm.c  tim.c  usart.c
BSP/BMP280/: BMP280.c  BMP280.h
BSP/KEY/: KEY.c  KEY.h
BSP/LED/: LED.c  LED.h
BSP/MPU6050/: MPU6050.c  MPU6050.h  MPU6050_Int.c  MPU6050_Int.h
BSP/MPU6050/eMPL/: inv_mpu.c  inv_mpu.h
BSP/NRF24L01/: NRF24L01.c  NRF24L01.h
BSP/OLED/: OLED.c  OLED.h
BSP/QMC5883P/: QMC5883P.c  QMC5883P.h
Core/MSPM0G3507/: G3507_delay.c  G3507_sys.c
Core/MSPM0G3507/inc/: G3507_gpio.h
Core/MSPM0G3507/src/: G3507_adc.c  G3507_gpio.c  G3507_pwm.c  G3507_tim.c  G3507_usart.c
Core/STM32F103/: f103_delay.c  f103_sys.c
Core/STM32F103/inc/: f103_adc.h  f103_exti.h  f103_gpio.h  f103_pwm.h  f103_tim.h  f103_usart.h
Core/STM32F103/src/: f103_adc.c  f103_gpio.c  f103_pwm.c  f103_tim.c  f103_usart.c
Core/STM32F407/: f407_delay.c  f407_sys.c
Core/STM32F407/cmake/: STM32F407VE_FLASH.ld
Core/STM32F407/inc/: f407_adc.h  f407_exti.h  f407_gpio.h  f407_pwm.h  f407_tim.h  f407_usart.h
Core/STM32F407/src/: f407_adc.c  f407_gpio.c  f407_pwm.c  f407_tim.c  f407_usart.c
Drivers/Drivers_STM32F1/Start/: startup_stm32f103c8tx_gcc.c
Drivers/Drivers_STM32F4/Start/: startup_stm32f407vetx_gcc.c  startup_stm32f40_41xxx.s  stm32f4xx.h  system_stm32f4xx.c
Enroll/: 103_hw_config.h  407_hw_config.h  Enroll.c  Enroll.h  G3507_hw_config.h
MDK_ARM/MDK_ARM_F103/: 103_project.uvguix.63459  103_project.uvoptx  103_project.uvprojx
MDK_ARM/MDK_ARM_F103/Listings/: 103_project.map
MDK_ARM/MDK_ARM_F407/: 407_project.uvguix.63459  407_project.uvoptx  407_project.uvprojx
MDK_ARM/MDK_ARM_F407/Listings/: 407_project.map  startup_stm32f40_41xxx.lst
Middlewares/FreeRTOS-LTS/FreeRTOSConfig/F103/: FreeRTOSConfig.h
Middlewares/FreeRTOS-LTS/FreeRTOSConfig/F407/: FreeRTOSConfig.h
OpenOCD/: F103_OpenOCD.cfg  F407_OpenOCD.cfg  G3507_OpenOCD.cfg
SYSTEM/: Delay.h  sys.c  sys.h
SYSTEM/F103_SYS/: f103_sys.c  f103_sys.h
SYSTEM/F407_SYS/: f407_sys.c  f407_sys.h
app/: BusRate.h  main.c
app/Control/: Control.c  Control.h
app/Control_Rtos/: Control_Rtos.c  Control_Rtos.h
app/Control_Task/: Control_Task.c  Control_Task.h  Control_Task_Rtos.c  Control_Task_Rtos.h
app/My_I2c/: My_I2c.c  My_I2c.h
app/My_SPI/: My_SPI.c  My_SPI.h
app/My_Usart/: My_Usart.c  My_Usart.h
app/PID/: PID.c  PID.h
docs/: FreeRTOS_core.md  FreeRTOS_timer.md  FreeRTOS_usart.md  architecture.md  daily_record.md  embedded-architecture.md  freertos_dev_rules.md  freertos_interrupt_rules.md  freertos_usart_queue_lab.md
oepnocd/: f407_oepnocd.cfg
